[package]
name = "vlc-rs"
version = "0.2.0"
authors = ["T. Okubo <t.okubo.rx78+github@gmail.com>"]

description = "Rust bindings for libVLC media framework."
keywords = ["libVLC", "bindings"]
repository = "https://github.com/garkimasera/vlc-rs"
license = "MIT"
readme = "README.md"

[lib]
name = "vlc"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
